infra/k8s/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: getupnet-api
  labels:
    app.kubernetes.io/name: getupnet-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: getupnet-api
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
